# rules-android-maven-live-resolution-repro

./: BUILD.bazel  MODULE.bazel  README.md
